# xenium-hne-fusion

./: .env.example  .gitignore  .rayignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  ray-cmds.md  resubmit.sh  slurm-cmds.md  tasks.md
config/local/: beat.yaml
configs/artifacts/: beat-hvg.yaml  beat.yaml  hescape-breast.yaml  hescape-colon.yaml  hescape-human-immuno-oncology.yaml  hescape-human-multi-tissue.yaml  hescape-lung.yaml  hest1k-breast.yaml  hest1k-lung.yaml  hest1k-pancreas.yaml  hest1k.yaml
configs/data/: beat.yaml  hest1k.yaml
configs/eval/: slugs.json
configs/splits/: beat.yaml  hest1k.yaml
configs/train/: expr.yaml  fusion-early.yaml  fusion-late.yaml  morph.yaml
issues/: check-failing-runs.py
issues/create-legacy-splits/: create_legacy_splits.py
issues/match-meso-splits/: compare_splits.py
panels/beat/: default.yaml  hvg-default.yaml
panels/hescape/: bowel.yaml  breast.yaml  human-immuno-oncology.yaml  human-multi-tissue.yaml  lung-healthy.yaml
paper/: experiment_plan.md  main.tex  zotero.bib
paper/tables/: clip-v2.tex  (+5 more)
ray/: beat-legacy.md  beat.md  hescape.md  hest1k.md  stop-jobs.sh  submit.sh
scribble/: compare_hvg_across_splits.py  debug_mil_train.py  ray_process_beat_cells.py  replot_all_sample_overviews.sh  replot_sample_overview.py  report_beat_excluded_samples.py  sbatch_process_beat_cells.py  sbatch_process_beat_cells.sh  warmup-cache.py
slurm/: beat-hvg.md  beat-legacy.md  beat.md  common.sh  hescape.md  hest1k.md  run_beat.sh  run_beat_slurm.sh  run_hest1k.sh  run_hest1k_slurm.sh  train_hest1k_early_fusion_organ.sh
tests/: test_compute_tile_stats.py  test_create_items.py  test_download.py  test_eval_config.py  test_eval_plotting.py  test_eval_slugs_plotting.py  test_eval_stats.py  test_eval_tables.py  test_eval_wandb.py  test_filter_items.py  test_getters.py  test_hescape_splits.py  test_hvg.py  test_make_token_tiles.py  test_metadata_pipeline.py  test_mil.py  test_panel_overlap.py  test_process_hest1k.py  test_processing.py  test_run_beat.py  test_run_hest1k.py  test_structure_scripts.py  test_supervised_train.py  test_tiles_dataset.py  test_tiling.py  test_train_cli.py  test_train_config_sweeper.py  test_train_utils.py
(+282 files in other folders)
