[project]
name = "xenium-hne-fusion"
version = "0.1.0"
description = "Xenium and H&E image fusion"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xenium_hne_fusion"]
